--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2201,6 +2201,7 @@ Ah, the crown jewel of Emacs 👑.
     (setopt org-directory                          denote-directory
             org-hide-emphasis-markers              t
             org-confirm-babel-evaluate             nil
+            org-ctrl-k-protect-subtree             'error
             org-startup-indented                   t
             org-indent-indentation-per-level       0
             org-startup-folded                     'content
