feat(home/emacs): update gptel models

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1592,7 +1592,7 @@ Persist undo history; despite the name, this works independently of Undo Fu and 
                 gpt-4o-mini
                 o1
                 o1-mini
-                Llama-3.3-70B-Instruct))
+                o3-mini))
     (gptel-make-openai "OpenRouter"
       :host "openrouter.ai"
       :endpoint "/api/v1/chat/completions"
@@ -1600,7 +1600,9 @@ Persist undo history; despite the name, this works independently of Undo Fu and 
       :key (lambda () (or (secrets-get-secret "KeePassXC" "OpenRouter")
                           (user-error "Unable to retrieve OpenRouter key")))
       :models '(google/gemini-2.0-flash-exp:free
+                deepseek/deepseek-r1:free
                 deepseek/deepseek-chat
+                deepseek/deepseek-r1
                 anthropic/claude-3-haiku:beta
                 anthropic/claude-3.5-sonnet:beta))
     (setopt gptel-model           'phi4:latest
@@ -1608,6 +1610,7 @@ Persist undo history; despite the name, this works independently of Undo Fu and 
                                     :host "windstorm:11434"
                                     :stream nil
                                     :models '(phi4:latest
+                                              deepseek-r1:14b
                                               llama3.1:latest
                                               (minicpm-v:latest
                                                :capabilities (media)
