--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -749,10 +749,10 @@ There's no built-in function to delete the current file, so here's mine.
      `(meow-beacon-indicator ((t :foreground ,fg-changed)))
      `(meow-keypad-indicator ((t :foreground ,fg-removed)))))
 
-  (meow-motion-overwrite-define-key
-   '("e"           . meow-next)
-   '("u"           . meow-prev)
-   '("<escape>"    . keyboard-escape-quit))
+  (meow-motion-define-key
+   '("e"        . meow-next)
+   '("u"        . meow-prev)
+   '("<escape>" . keyboard-escape-quit))
 
   (meow-leader-define-key
    '("?" . meow-cheatsheet)
@@ -766,7 +766,7 @@ There's no built-in function to delete the current file, so here's mine.
    '("8" . meow-digit-argument)
    '("9" . meow-digit-argument)
    '("0" . meow-digit-argument)
-   '("u" . meow-universal-argument)
+   '("l" . meow-universal-argument)
    `("s" . ,search-map)
    '("p" . "C-x p"))
 
