feat(home/emacs): use nerd icons in magit

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1334,6 +1334,7 @@ Command to enable Direnv for Nix.
   (after! magit
     (setopt magit-save-repository-buffers 'dontask
             magit-display-buffer-function #'magit-display-buffer-same-window-except-diff-v1
+            magit-format-file-function #'magit-format-file-nerd-icons
             ;; We do this ourselves for lazy-loading
             magit-bind-magit-project-status nil
             magit-clone-default-directory "~/git/"
