--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -3412,8 +3412,8 @@ Fetch feeds from my Tiny Tiny RSS server via [[https://github.com/fasheng/elfeed
 
     (setopt elfeed-protocol-enabled-protocols '(ttrss)
             elfeed-protocol-feeds '(("ttrss+http://ad@feeds.adtailnet"
-                                            :password (secrets-get-secret)
-                                                "KeePassXC" "Tiny Tiny RSS"))
+                                     :password (secrets-get-secret
+                                                "KeePassXC" "Tiny Tiny RSS")))
             elfeed-protocol-ttrss-maxsize 200
             elfeed-protocol-ttrss-fetch-category-as-tag t)
 
