fix(home/emacs): don't wrap lines in mu4e header view

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -3125,6 +3125,10 @@ Add a function to publish ~geo:~ links as URLs that lead to OpenStreetMap's webs
   (setq mail-user-agent #'mu4e-user-agent
         read-mail-command #'mu4e)
 
+  (add-hook 'mu4e-headers-mode-hook (lambda ()
+                                      (visual-line-mode -1)
+                                      (setq truncate-lines t)))
+
   (after! mu4e
     (bind-key "b" #'mu4e-search-bookmark mu4e-main-mode-map)
 
