--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -711,10 +711,11 @@ There's no built-in function to delete the current file, so here's mine.
     (interactive)
     (unless buffer-file-name
       (user-error "Current buffer is not visiting a file"))
-    (when (yes-or-no-p (concat "Really delete " buffer-file-name "?"))
+    (when-let* (((yes-or-no-p (concat "Really delete " buffer-file-name "?")))
+                (file-name buffer-file-name))
       (delete-file buffer-file-name)
       (kill-buffer)
-      (message "Deleted %s" buffer-file-name)))
+      (message "Deleted %s" file-name)))
 #+end_src
 
 #+begin_src elisp
