fix(home/emacs): start eshell in insert mode

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -3268,10 +3268,17 @@ Modify [[help:mu4e-marks][mu4e-marks]] to mark messages read upon trashing them 
     (eat-eshell-mode)
     ;; Since we have Eat emulating a true terminal, we don't want any commands to
     ;; defer to an external `term' buffer.
-    (setopt eshell-visual-commands nil)
-    ;; God Mode key
-    (add-to-list 'eat-semi-char-non-bound-keys [escape])
-    (add-to-list 'eat-eshell-semi-char-non-bound-keys [escape])
+    (setopt eshell-visual-commands nil))
+#+end_src
+
+Play nice with [[*Meow][Meow]].
+#+begin_src elisp
+  (after! meow
+    (push '(eshell-mode . insert) meow-mode-state-list))
+
+  (after! eshell
+    (push [escape] eat-semi-char-non-bound-keys)
+    (push [escape] eat-eshell-semi-char-non-bound-keys)
     (eat-update-semi-char-mode-map)
     (eat-eshell-update-semi-char-mode-map))
 #+end_src
