--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -3489,7 +3489,7 @@ Configuration:
   (after! elfeed-tube
     (setopt elfeed-tube-use-ytdlp-p t
             elfeed-tube-auto-fetch-p t
-            elfeed-tube-auto-save-p nil))
+            elfeed-tube-auto-save-p t))
 #+end_src
 
 * Miscellaneous
