feat(home/emacs): explicitly bind elfeed-tube-mpv

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -3479,9 +3479,9 @@ Keybinds:
                :map elfeed-show-mode-map
                ("F" . elfeed-tube-fetch)
                ([remap save-buffer] . elfeed-tube-save)
+               ("m" . elfeed-tube-mpv)
                ("C-c C-f" . elfeed-tube-mpv-follow-mode)
                ("C-c C-w" . elfeed-tube-mpv-where)))
-     
 #+end_src
 
 Configuration:
