feat(home/emacs): back to monolisa
Been a while; I forgot how wide this font is 😭, but it does look quite nice 🙃.

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -559,10 +559,10 @@ Reduce fringe size on the right (left is used for various indicators).
 ** Fonts
 #+begin_src elisp
   (custom-set-faces
-   '(default           ((t (:font "Iosevka SS18"       :height 140))))
-   '(fixed-pitch       ((t (:font "Iosevka Fixed SS18" :height unspecified))))
-   '(fixed-pitch-serif ((t (:font "Iosevka Slab"       :height unspecified))))
-   '(variable-pitch    ((t (:font "Iosevka Aile"       :height 140)))))
+   '(default           ((t (:font "MonoLisa"     :height 140))))
+   '(fixed-pitch       ((t (:font "MonoLisa"     :height unspecified))))
+   '(fixed-pitch-serif ((t (:font "MonoLisa"     :height unspecified))))
+   '(variable-pitch    ((t (:font "Iosevka Aile" :height 140)))))
 #+end_src
 
 #+begin_src elisp
