--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -562,7 +562,7 @@ Reduce fringe size on the right (left is used for various indicators).
    '(default           ((t (:font "MonoLisa"     :height 140))))
    '(fixed-pitch       ((t (:font "MonoLisa"     :height unspecified))))
    '(fixed-pitch-serif ((t (:font "MonoLisa"     :height unspecified))))
-   '(variable-pitch    ((t (:font "Iosevka Aile" :height 140)))))
+   '(variable-pitch    ((t (:font "Atkinson Hyperlegible" :height 140)))))
 #+end_src
 
 #+begin_src elisp
