fix(home/emacs): set org-modern-symbol face to monolisa

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2490,7 +2490,7 @@ Make Org Mode pretty! Star replacement symbols are taken from [[https://github.c
                               :inherit fixed-pitch)))
        `(org-modern-done ((t :inherit org-modern-todo
                              :foreground ,green)))
-       '(org-modern-symbol ((t (:family "Iosevka Aile" :height 1.1)))))))
+       '(org-modern-symbol ((t (:family "MonoLisa" :height 1.1)))))))
 #+end_src
 
 ** Org Indent
