--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -559,10 +559,10 @@ Reduce fringe size on the right (left is used for various indicators).
 ** Fonts
 #+begin_src elisp
   (custom-set-faces
-   '(default           ((t (:font "MonoLisa"              :height 120))))
-   '(fixed-pitch       ((t (:font "MonoLisa"              :height 120))))
-   '(fixed-pitch-serif ((t (:font "MonoLisa"              :height 120))))
-   '(variable-pitch    ((t (:font "Atkinson Hyperlegible" :height 140)))))
+   '(default           ((t (:font "MonoLisa" :height 120))))
+   '(fixed-pitch       ((t (:font "MonoLisa" :height 120))))
+   '(fixed-pitch-serif ((t (:font "MonoLisa" :height 120))))
+   '(variable-pitch    ((t (:font "Atkinson Hyperlegible Next" :height 140)))))
 #+end_src
 
 #+begin_src elisp
