--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1623,10 +1623,10 @@ Persist undo history; despite the name, this works independently of Undo Fu and 
             gptel-backend         (gptel-make-ollama "Ollama"
                                     :host "windstorm:11434"
                                     :stream nil
-                                    :models '(phi4:latest
+                                    :models '(phi4-mini:latest
                                               deepseek-r1:14b
-                                              llama3.1:latest
-                                              (minicpm-v:latest
+                                              qwen2.5-coder:14b
+                                              (gemma3:12b
                                                :capabilities (media)
                                                :mime-types ("image/png"))))
             gptel-default-mode    #'org-mode
