--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1614,12 +1614,15 @@ Persist undo history; despite the name, this works independently of Undo Fu and 
       :key (lambda () (or (secrets-get-secret "KeePassXC" "OpenRouter")
                           (user-error "Unable to retrieve OpenRouter key")))
       :models '(google/gemini-2.0-flash-exp:free
+                deepseek/deepseek-chat:free
                 deepseek/deepseek-r1:free
                 deepseek/deepseek-chat
                 deepseek/deepseek-r1
                 anthropic/claude-3-haiku:beta
-                anthropic/claude-3.5-sonnet:beta))
-    (setopt gptel-model           'phi4:latest
+                anthropic/claude-3.5-sonnet:beta
+                anthropic/claude-3.7-sonnet
+                anthropic/claude-3.7-sonnet:thinking))
+    (setopt gptel-model           'gemma3:12b
             gptel-backend         (gptel-make-ollama "Ollama"
                                     :host "windstorm:11434"
                                     :stream nil
@@ -1628,7 +1631,7 @@ Persist undo history; despite the name, this works independently of Undo Fu and 
                                               qwen2.5-coder:14b
                                               (gemma3:12b
                                                :capabilities (media)
-                                               :mime-types ("image/png"))))
+                                               :mime-types ("image/png" "image/jpeg"))))
             gptel-default-mode    #'org-mode
             gptel-track-media     t
             gptel-expert-commands t)
