--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1992,6 +1992,29 @@ Esup is an Emacs startup profiler that uses a child process to step through the 
     (setopt esup-depth 0))
 #+end_src
 
+** Aidermacs
+Keybinding (=C-c a= is taken by [[*gptel][gptel]]):
+#+begin_src elisp
+  (bind-key "C-c A" #'aidermacs-transient-menu)
+#+end_src
+
+Set up API keys before starting Aider from KeePassXC database.
+#+begin_src elisp
+  (add-hook 'aidermacs-before-run-backend-hook
+            (lambda ()
+              (setenv "OPENROUTER_API_KEY"
+                      (secrets-get-secret "KeePassXC" "OpenRouter"))
+              (setenv "GITHUB_API_KEY"
+                      (secrets-get-secret "KeePassXC" "GitHub AI"))))
+#+end_src
+
+Configuration:
+#+begin_src elisp
+  (after! aidermacs
+    (setopt aidermacs-default-model "github/gpt-4o"
+            aidermacs-weak-model "github/gpt-4o-mini"))
+#+end_src
+
 * Denote
 #+begin_src elisp
   (bind-keys ("C-c X" . org-capture)
