feat(home/emacs): denote tag needy -> brew

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2385,7 +2385,7 @@ Ah, the crown jewel of Emacs 👑.
             org-agenda-skip-deadline-if-done t
             org-agenda-skip-scheduled-if-done t
             org-agenda-skip-deadline-prewarning-if-scheduled 'pre-scheduled
-            org-agenda-hide-tags-regexp (rx (or "agenda" "journal" "needy"))
+            org-agenda-hide-tags-regexp (rx (or "agenda" "journal" "brew"))
             org-agenda-span 'fortnight
             org-agenda-start-on-weekday nil
             org-agenda-start-day "-3d"
