--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2036,7 +2036,7 @@ Configuration:
             ;; Illegal characters on Android
             denote-excluded-punctuation-extra-regexp (rx (* (or "<" ">")))
             denote-excluded-directories-regexp "publish/"
-            denote-known-keywords '("agenda" "person" "needy" "private"
+            denote-known-keywords '("agenda" "person" "brew" "private"
                                     "reference" "thought" "journal")
             denote-date-prompt-use-org-read-date t
             denote-backlinks-show-context t
