--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -162,6 +162,14 @@ Load only at compile time (I like a few of Common Lisp's macros 🙃).
     (require 'cl-lib))
 #+end_src
 
+** llama
+A nice, simple way to quickly define compact lambdas 😁. Since it's a macro, it's only needed at compile time 👍.
+
+#+begin_src elisp
+  (eval-when-compile
+    (require 'llama))
+#+end_src
+
 ** el-patch
 ~el-patch~ must be loaded during byte compilation for the macros, else errors occur when trying to use the byte-compiled file. Defining new types must also be wrapped in [[help:eval-and-compile][eval-and-compile]], since macros need be defined at compilation time, but the definition must also be evaluated inside the session in order for validation to work properly.
 #+begin_src elisp
@@ -761,8 +769,7 @@ There's no built-in function to delete the current file, so here's mine.
   (setq meow-cheatsheet-layout meow-cheatsheet-layout-colemak-dh
         meow-use-clipboard t
         meow-keypad-self-insert-undefined nil
-        auto-save-visited-predicate (lambda ()
-                                      (not (meow-insert-mode-p))))
+        auto-save-visited-predicate (##not (meow-insert-mode-p)))
   (ef-themes-with-colors
     (custom-set-faces
      `(meow-insert-indicator ((t :foreground ,fg-added)))
@@ -1161,7 +1168,7 @@ Repeat map for candidate navigation.
               :category file
               :face consult-file
               :history file-name-history
-              :enabled ,(lambda () (featurep 'zoxide))
+              :enabled ,(##featurep 'zoxide)
               :items ,#'zoxide-query)
       "Source for `consult-dir' using `zoxide.el'.")
     (cl-pushnew 'my/consult-dir-source-zoxide consult-dir-sources))
@@ -1276,15 +1283,13 @@ Wrap Eglot to ensure that completions aren't cached (since LSPs usually don't re
   :complete property to create links with completion."
       (org-link-set-parameters
        "help"
-       :insert-description (lambda (url desc)
-                             (or desc
-                                 (substring url 5)))
-       :complete (lambda (&optional arg)
-                   (concat "help:"
+       :insert-description (##or %2 (substring %1 5))
+       :complete (##concat _&1
+                           "help:"
                            (symbol-name (helpful--read-symbol
                                          "Symbol: "
                                          (helpful--symbol-at-point)
-                                         #'always))))))
+                                         #'always)))))
     (advice-add #'helpful--add-support-for-org-links
                 :after #'my/org-help-link-make-nicer))
 #+end_src
@@ -1634,8 +1639,8 @@ Persist undo history; despite the name, this works independently of Undo Fu and 
       :host "models.inference.ai.azure.com"
       :endpoint "/chat/completions"
       :stream t
-      :key (lambda () (or (secrets-get-secret "KeePassXC" "GitHub AI")
-                          (user-error "Unable to retrieve GitHub AI key")))
+      :key (##or (secrets-get-secret "KeePassXC" "GitHub AI")
+                 (user-error "Unable to retrieve GitHub AI key"))
       :models '(gpt-4o
                 gpt-4o-mini
                 o1
@@ -1645,8 +1650,8 @@ Persist undo history; despite the name, this works independently of Undo Fu and 
       :host "openrouter.ai"
       :endpoint "/api/v1/chat/completions"
       :stream t
-      :key (lambda () (or (secrets-get-secret "KeePassXC" "OpenRouter")
-                          (user-error "Unable to retrieve OpenRouter key")))
+      :key (##or (secrets-get-secret "KeePassXC" "OpenRouter")
+                 (user-error "Unable to retrieve OpenRouter key"))
       :models '(google/gemini-2.0-flash-exp:free
                 deepseek/deepseek-chat:free
                 deepseek/deepseek-r1:free
@@ -2050,13 +2055,12 @@ Configuration:
             denote-dired-directories (list denote-directory)
             denote-dired-directories-include-subdirectories t
             denote-templates `((default . "")
-                               (person . ,(lambda ()
-                                            (with-temp-buffer
-                                              (insert-file-contents
-                                               (expand-file-name
-                                                "template/person.org"
-                                                 denote-directory))
-                                              (buffer-string)))))
+                               (person . ,(##with-temp-buffer
+                                            (insert-file-contents
+                                             (expand-file-name
+                                              "template/person.org"
+                                              denote-directory))
+                                            (buffer-string))))
             consult-denote-grep-command #'consult-ripgrep))
 
   (after! org-capture
@@ -2097,8 +2101,7 @@ Configuration:
   (defun my/goto-thought-stack ()
     "Visit Denote thought stack file. Used by `org-capture' template."
     (let ((path (car
-                 (seq-filter (lambda (x)
-                               (string-match-p "--thought-stack" x))
+                 (seq-filter (##string-match-p "--thought-stack" %1)
                              (denote-directory-files)))))
       (find-file path)
       (goto-char (point-min))))
@@ -2157,16 +2160,15 @@ Configuration:
     (setopt denote-journal-extras-directory (expand-file-name "journal/" denote-directory)
             denote-journal-extras-title-format "%Y-%m-%d %a")
     (setf (alist-get 'journal denote-templates)
-          (lambda ()
-            (with-temp-buffer
-              (insert-file-contents
-               (expand-file-name "template/journal.org"
-                                 ;; We have to use `default-toplevel-value' here
-                                 ;; because the journal code let-binds
-                                 ;; `denote-directory' to the journal
-                                 ;; subdirectory.
-                                 (default-toplevel-value 'denote-directory))) 
-              (buffer-string)))))
+          (##with-temp-buffer
+            (insert-file-contents
+             (expand-file-name "template/journal.org"
+                               ;; We have to use `default-toplevel-value' here
+                               ;; because the journal code let-binds
+                               ;; `denote-directory' to the journal
+                               ;; subdirectory.
+                               (default-toplevel-value 'denote-directory)))
+            (buffer-string))))
 #+end_src
 
 ** Explore
@@ -2269,7 +2271,7 @@ Ah, the crown jewel of Emacs 👑.
 #+begin_src elisp
   (add-hook 'org-mode-hook #'variable-pitch-mode)
   (add-hook 'org-mode-hook #'writeroom-mode)
-  (add-hook 'org-mode-hook (lambda () (setq-local line-spacing 0.1)))
+  (add-hook 'org-mode-hook (##setq-local line-spacing 0.1))
   (add-hook 'org-mode-hook #'org-autolist-mode)
 
   (add-hook 'org-capture-mode-hook #'meow-insert)
@@ -2933,7 +2935,7 @@ not load org.el but only ox.el.
 ** Lisp
 #+begin_src elisp
   (add-hook 'lisp-data-mode-hook #'parinfer-rust-mode)
-  (add-hook 'parinfer-rust-mode-hook (lambda () (electric-pair-local-mode -1)))
+  (add-hook 'parinfer-rust-mode-hook (##electric-pair-local-mode -1))
 
   (after! parinfer-rust-mode
     (setopt parinfer-rust-auto-download t
@@ -3254,26 +3256,23 @@ Add a function to publish ~geo:~ links as URLs that lead to OpenStreetMap's webs
             mu4e-completing-read-function #'completing-read
             mu4e-compose-format-flowed t
             mu4e-confirm-quit nil
-            mu4e-search-hide-predicate (lambda (msg)
-                                         (member 'trashed
-                                                 (mu4e-message-field msg :flags)))
+            mu4e-search-hide-predicate (##member 'trashed
+                                                 (mu4e-message-field %1 :flags))
             mu4e-context-policy 'pick-first
             mu4e-contexts
             `(,(make-mu4e-context
                 :name (my/private 'user 'public)
                 :match-func
-                (lambda (msg)
-                  (and msg
+                (##and %1
                        (cl-find-if
-                        (lambda (email)
-                          (string-match-p
-                           (rx "@"
-                               (literal (my/private 'domain 'public))
-                               string-end)
-                           email))
-                        (append (mu4e-message-field msg :to)
-                                (mu4e-message-field msg :from))
-                        :key (lambda (x) (plist-get x :email)))))
+                        (##string-match-p
+                         (rx "@"
+                             (literal (my/private 'domain 'public))
+                             string-end)
+                         %1)
+                        (append (mu4e-message-field %1 :to)
+                                (mu4e-message-field %1 :from))
+                        :key (##plist-get %1 :email)))
                 :vars `((user-mail-address . ,(my/private 'email 'public))
                         (user-full-name . "Ad")
                         (mu4e-sent-folder . "/mailbox/Sent")
@@ -3282,18 +3281,16 @@ Add a function to publish ~geo:~ links as URLs that lead to OpenStreetMap's webs
               ,(make-mu4e-context
                 :name (my/private 'user 'personal)
                 :match-func
-                (lambda (msg)
-                  (and msg
+                (##and %1
                        (cl-find-if
-                        (lambda (email)
-                          (string-match-p
-                           (rx "@"
-                               (literal (my/private 'domain 'personal))
-                               string-end)
-                           email))
-                        (append (mu4e-message-field msg :to)
-                                (mu4e-message-field msg :from))
-                        :key (lambda (x) (plist-get x :email)))))
+                        (##string-match-p
+                         (rx "@"
+                             (literal (my/private 'domain 'personal))
+                             string-end)
+                         %1)
+                        (append (mu4e-message-field %1 :to)
+                                (mu4e-message-field %1 :from))
+                        :key (##plist-get %1 :email)))
                 :vars `((user-mail-address . ,(my/private 'email 'personal))
                         (user-full-name . ,(my/private 'name))
                         (mu4e-sent-folder . "/mailbox/Sent")
@@ -3309,15 +3306,14 @@ I have some catch-all aliases set up, so, when replying, I always want to use th
       (when-let* ((msg mu4e-compose-parent-message)
                   (parent-to (mu4e-message-field msg :to))
                   (my-address (cl-find-if
-                               (lambda (email)
-                                 (string-match-p
-                                  (rx "@"
-                                      (or (literal (my/private 'domain 'public))
-                                          (literal (my/private 'domain 'personal)))
-                                      string-end)
-                                  email))
+                               (##string-match-p
+                                (rx "@"
+                                    (or (literal (my/private 'domain 'public))
+                                        (literal (my/private 'domain 'personal)))
+                                    string-end)
+                                %1)
                                parent-to
-                               :key (lambda (x) (plist-get x :email))))
+                               :key (##plist-get %1 :email)))
                   (name (plist-get my-address :name))
                   (email (plist-get my-address :email)))
         (message-replace-header "From"
@@ -3461,7 +3457,7 @@ Automatically enable/disable [[help:vterm-copy-mode][vterm-copy-mode]] when ente
   (defun my/setup-meow-toggle-vterm-copy-mode ()
     "Add hooks to enable/disable `vterm-copy-mode' with Meow's insert mode."
     (add-hook 'meow-insert-exit-hook #'vterm-copy-mode nil t)
-    (add-hook 'meow-insert-enter-hook (lambda () (vterm-copy-mode -1)) nil t))
+    (add-hook 'meow-insert-enter-hook (##vterm-copy-mode -1) nil t))
 
   (add-hook 'vterm-mode-hook #'my/setup-meow-toggle-vterm-copy-mode)
 #+end_src
