fix(home/emacs): adapt to denote 4 restructuring

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2039,10 +2039,10 @@ Configuration:
   (bind-keys ("C-c X" . org-capture)
              :map my/notes-map
              ("b" . denote-backlinks)
-             ("B" . denote-org-extras-backlinks-for-heading)
+             ("B" . denote-org-backlinks-for-heading)
              ("f" . denote-open-or-create)
              ("l" . denote-link-or-create)
-             ("L" . denote-org-extras-link-to-heading)
+             ("L" . denote-org-link-to-heading)
              ("k" . denote-rename-file-keywords))
 
   (add-hook 'dired-mode-hook #'denote-dired-mode-in-directories)
@@ -2130,7 +2130,7 @@ Configuration:
     "Visit or create yesterday's Denote journal entry.
   If FORWARD is non-nil, go to tomorrow instead."
     (interactive)
-    (denote-journal-extras-new-or-existing-entry
+    (denote-journal-new-or-existing-entry
      (time-add nil (* 60 60 24 (if forward 1 -1)))))
 
   (defun my/denote-journal-tomorrow ()
@@ -2141,8 +2141,8 @@ Configuration:
   (bind-keys :map my/notes-map
              :prefix "d"
              :prefix-map my/denote-journal-map
-             ("d" . denote-journal-extras-new-or-existing-entry)
-             ("l" . denote-journal-extras-link-or-create-entry)
+             ("d" . denote-journal-new-or-existing-entry)
+             ("l" . denote-journal-link-or-create-entry)
              ("t" . my/denote-journal-tomorrow)
              ("y" . my/denote-journal-yesterday))
 
@@ -2150,7 +2150,7 @@ Configuration:
     "Function called by `org-capture' to prepare for a check-in entry
   capture. Visits the journal entry for today and moves point to
   the end of the file."
-    (denote-journal-extras-new-or-existing-entry)
+    (denote-journal-new-or-existing-entry)
     (goto-char (point-max)))
 
   (after! org-capture
@@ -2163,9 +2163,9 @@ Configuration:
                 org-capture-templates
                 :test #'equal))
 
-  (after! denote-journal-extras
-    (setopt denote-journal-extras-directory (expand-file-name "journal/" denote-directory)
-            denote-journal-extras-title-format "%Y-%m-%d %a")
+  (after! denote-journal
+    (setopt denote-journal-directory (expand-file-name "journal/" denote-directory)
+            denote-journal-title-format "%Y-%m-%d %a")
     (setf (alist-get 'journal denote-templates)
           (##with-temp-buffer
             (insert-file-contents
@@ -2439,7 +2439,7 @@ Habits.
 *Super* agenda 🔥.
 #+begin_src elisp
   (after! org-agenda
-    (require 'denote-journal-extras)
+    (require 'denote-journal)
     (org-super-agenda-mode)
 
     (defun my/agenda-transform-daily-plan-line (line)
@@ -2471,7 +2471,7 @@ Habits.
      '(("c" "Custom super view"
         ((agenda "" ((org-agenda-files
                        (append org-agenda-files
-                               (denote-journal-extras--entry-today)))
+                               (denote-journal--entry-today)))
                      (org-agenda-span 'day)
                      (org-agenda-start-day nil)
                      (org-super-agenda-groups
