fix(home/emacs): zoxide function for dirvish hook
Dirvish just randomly broke for me, and for so fucking long I was bothered by it
not working, but didn't bother tracking down the issue. Now that I have, I have
no idea how I ever survived as long as I did with it broken 😭.

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1512,7 +1512,10 @@ In addition to auto-loading via filename or magic values, we also want to load t
     (unless path
       (setq path (funcall zoxide-get-path-function 'add)))
     (when (file-exists-p path)
-      (zoxide-add path)))
+      (zoxide-add path))
+    ;; Return nil, otherwise running inside `dirvish-find-entry-hook' inhibits
+    ;; `dirvish--find-entry'.
+    nil)
 
   (add-hooks! '(find-file-hook
                 eshell-directory-change-hook
