--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -616,17 +616,11 @@ Increase Treesit's fontification level (I like my editor to look like a rainbow 
 
 ** Theme
 #+begin_src elisp
-  (require 'ef-themes)
+  (require 'doric-themes)
 
-  (setq ef-themes-mixed-fonts t
-        ef-themes-headings '((0 1.8)
-                             (1 variable-pitch light 1.5)
-                             (2 variable-pitch light 1.4)
-                             (3 variable-pitch light 1.3)
-                             (4 variable-pitch light 1.2)
-                             (t variable-pitch light 1.1)))
+  (setq doric-themes-to-toggle '(doric-earth doric-obsidian))
 
-  (ef-themes-load-theme 'ef-owl)
+  (doric-themes-select 'doric-obsidian)
 #+end_src
 
 ** Spacious Padding
