--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -616,11 +616,17 @@ Increase Treesit's fontification level (I like my editor to look like a rainbow 
 
 ** Theme
 #+begin_src elisp
-  (require 'doric-themes)
+  (require 'ef-themes)
 
-  (setq doric-themes-to-toggle '(doric-earth doric-obsidian))
+  (setq ef-themes-mixed-fonts t
+        ef-themes-headings '((0 1.8)
+                             (1 variable-pitch light 1.5)
+                             (2 variable-pitch light 1.4)
+                             (3 variable-pitch light 1.3)
+                             (4 variable-pitch light 1.2)
+                             (t variable-pitch light 1.1)))
 
-  (doric-themes-select 'doric-obsidian)
+  (ef-themes-load-theme 'ef-owl)
 #+end_src
 
 ** Spacious Padding
