feat(home/emacs): set denote-org-store-link-to-heading to t
I swear I had this set at some point 😕.

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2060,6 +2060,7 @@ Configuration:
             denote-known-keywords '("agenda" "person" "brew" "private"
                                     "reference" "thought" "journal")
             denote-date-prompt-use-org-read-date t
+            denote-org-store-link-to-heading t
             denote-backlinks-show-context t
             denote-prompts '(title keywords template)
             denote-dired-directories (list denote-directory)
