--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -3026,6 +3026,11 @@ Common Lisp.
         (alist-get "nu" interpreter-mode-alist
                    nil nil #'equal)
         #'nushell-mode)
+
+  (after! org
+    (setf (alist-get "nu" org-src-lang-modes
+                     nil nil #'equal)
+          'nushell))
 #+end_src
 
 ** Just
